unpackaged/main/default/objects/Event__c/fields/ActiveFrom__c.field-meta.xml
<CustomField>
    <fullName>ActiveFrom__c</fullName>
    <label>Active From</label>
    <type>Date</type>
</CustomField>