unpackaged/main/default/objects/Event__c/fields/ActiveUntil__c.field-meta.xml
<CustomField>
    <fullName>ActiveUntil__c</fullName>
    <label>Active Until</label>
    <type>Date</type>
</CustomField>