unpackaged/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEIT 1898 TOKYO VIC Event</fullName>
            </value>
            <value>
                <fullName>Holiday Season 2023</fullName>
            </value>
            <value>
                <fullName>Seit 1898 NYC - VIC</fullName>
            </value>
            <value>
                <fullName>Seit 1898 NYC - VVIC</fullName>
            </value>
            <value>
                <fullName>Seit 1898 NYC - Public</fullName>
            </value>
            <value>
                <fullName>Adidas</fullName>
                <isActive>false</isActive>
                <label>Adidas</label>
            </value>
            <value>
                <fullName>NEC 7</fullName>
                <isActive>false</isActive>
                <label>NEC 7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>