unpackaged/main/default/objects/Event__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Asia Pacific</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Japan</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>North America</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>South America</label>
            </value>
            <value>
                <fullName>AMERIC</fullName>
                <label>America</label>
            </value>
            <value>
                <fullName>EUROPE</fullName>
                <label>Europe</label>
            </value>
            <value>
                <fullName>MEAST</fullName>
                <label>Middle East</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>