unpackaged/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>ActiveFrom__c</columns>
    <columns>ActiveUntil__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>